--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* Root Container */
+
 #root {
   width: 100%;
   margin: 0 auto;
@@ -6,13 +6,13 @@
   text-align: center;
 }
 
-/* Base Body Styling */
+
 body {
   margin: 0;
   font-family: Arial, sans-serif;
 }
 
-/* App Container */
+
 .app {
   display: flex;
   flex-direction: column;
@@ -40,41 +40,49 @@ body {
   color: white;
    position: sticky;
   top: 0;
-  z-index: 100;
+}
+
+.navbar {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
 }
 
 .navbar.dark {
   background-color: #1e1e1e;
 }
+.links {
+  display: flex;
+  gap: 15px;
+  justify-content: flex-start;
+}
 
 .links a {
-  margin-right: 15px;
   text-decoration: none;
   color: white;
   font-weight: bold;
+  font-size: 1rem;
+  transition: color 0.3s;
 }
 
 .links a:hover {
   text-decoration: underline;
 }
 
-/* Dark Mode Toggle Button */
+
 .toggle-btn {
-  padding: 8px 12px;
+  justify-self: end;
   border: none;
   cursor: pointer;
-  background: white;
-  color: #4caf50;
+  background: none;
+  color: #fafafa;
   font-weight: bold;
-  border-radius: 5px;
-  transition: background 0.3s;
 }
 
 .toggle-btn:hover {
   background: #ddd;
 }
 
-/* Add Item Form */
 .add-item-form {
   max-width: 400px;
   margin: 40px auto;
@@ -144,25 +152,42 @@ body {
   margin-bottom: 10px;
 }
 
-/* About & Home Pages */
+
 .about,
 .home {
   padding: 20px;
 }
 
-/* Responsive Adjustments */
+.about-container {
+  max-width: 700px;
+  margin: 50px auto;
+  padding: 20px;
+  text-align: center;
+  line-height: 1.6;
+}
+
+.about-container h1 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+}
+
+.about-container p{
+  font-size: 1.1rem;
+}
+
+
 @media (min-width: 768px) {
   .add-item-form {
     margin-top: 60px;
   }
 }
 
-/* Logo (optional) */
+
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+ text-align: center;
+ font-size: 1.4rem;
+ font-weight: bold;
+ color: white;
 }
 
 .logo:hover {
@@ -173,7 +198,7 @@ body {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-/* Optional Animation */
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
